# rules_deb_packages

./: .bazelignore  .bazelversion  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rules_deb_packages  bazel-testlogs  external.bzl  internal_deps.bzl  repositories.bzl
.github/workflows/: ci.yaml  golangci.yml  release.yaml
cmd/debian_package_manager/: .gitignore  BUILD.bazel  README.md  deps.bzl  go.mod  go.sum  main.go
cmd/debian_package_manager/cli/: BUILD.bazel  generage.go  root.go  update.go
cmd/debian_package_manager/pkg/deb/: BUILD.bazel  package.go  package_test.go  packageindex.go  parser.go  parser_test.go  snapshot.go  versions.go  versions_test.go
cmd/debian_package_manager/pkg/rhttp/: BUILD.bazel  rhttp.go
cmd/debian_spdx/: BUILD.bazel  debian_spdx.go  deps.bzl  go.mod
cmd/dpkg_status/: BUILD.bazel  deps.bzl  go.mod
cmd/oci_image_spdx/: BUILD.bazel  deps.bzl  go.mod  go.sum  oci_image_spdx.go
cmd/update_deb_packages/: BUILD.bazel  deps.bzl  go.mod  go.sum
deb/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
deb/private/: BUILD.bazel  toolchains_repo.bzl
deb/private/rules/: BUILD.bazel  debian_package.bzl  update_packages.bzl
deb/private/rules/pkg/: BUILD.bazel  debian_spdx.bzl  dpkg_status.bzl  oci_image_spdx.bzl
deb/private/rules/util/: BUILD.bazel
deb_packages/: WORKSPACE  debian_package.bzl  repositories.bzl  update_deb_packages.bzl
deb_packages/private/pkg/: debian_spdx.bzl  dpkg_status.bzl
examples/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  defaults.bzl  packages.yaml
examples/bionic/: BUILD.bazel  MODULE.bazel  WORKSPACE  ubuntu_jammy_amd64.bzl  ubuntu_jammy_arm64.bzl
examples/containers/base/: BUILD.bazel  tests.yaml
rules/: repositories.bzl
