load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

[buildifier(
    name = "buildifier." + MODE,
    exclude_patterns = [
        "*/node_modules/*",
        "*/dist/*",
        "./*local*/*",
        "./*tmp*/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = MODE,
    verbose = True,
    visibility = ["//visibility:public"],
) for MODE in [
    "check",
    "fix",
]]

# This declares the release artifact users
pkg_tar(
    name = "rules_deb_packages",
    srcs = [
        "LICENSE",
        "README.md",
        "//deb:package_content",
    ],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    strip_prefix = ".",
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
