load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/mmogylenko/rules_deb_packages/cmd/debian_spdx
gazelle(name = "gazelle")

gazelle(
    name = "update-repos",
    args = [
        "-from_file=cmd/debian_spdx/go.mod",
        "-to_macro=cmd/debian_spdx/deps.bzl%debian_spdx_deps",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_library(
    name = "debian_spdx_lib",
    srcs = ["debian_spdx.go"],
    importpath = "github.com/mmogylenko/rules_deb_packages/cmd/debian_spdx",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_spdx_tools_golang//json",
        "@com_github_spdx_tools_golang//spdx/v2/common",
        "@com_github_spdx_tools_golang//spdx/v2/v2_3",
    ],
)

go_binary(
    name = "debian_spdx",
    embed = [":debian_spdx_lib"],
    visibility = ["//visibility:public"],
)
