load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mmogylenko/rules_deb_packages/cmd/update_deb_packages
gazelle(name = "gazelle")

gazelle(
    name = "update-repos",
    args = [
        "-from_file=cmd/update_deb_packages/go.mod",
        "-to_macro=cmd/update_deb_packages/deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_library(
    name = "update_deb_packages_lib",
    srcs = ["update_deb_packages.go"],
    importpath = "github.com/mmogylenko/rules_deb_packages/cmd/update_deb_packages",
    visibility = ["//visibility:private"],
    deps = [
        "@ag_pault_go_debian//control:go_default_library",
        "@ag_pault_go_debian//version:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@org_golang_x_crypto//openpgp:go_default_library",
    ],
)

go_binary(
    name = "update_deb_packages",
    embed = [":update_deb_packages_lib"],
    visibility = ["//visibility:public"],
)
