load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]) + [
        "//deb/private/rules:package_content",
        "//deb/private/rules/pkg:package_content",
        "//deb/private/rules/util:package_content",
    ],
    visibility = ["//deb:__pkg__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//deb:__subpackages__"],
)
