"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//deb/private:__pkg__"],
)

bzl_library(
    name = "debian_package",
    srcs = ["debian_package.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//deb/private/rules/pkg:deb_spdx",
        "@bazel_skylib//lib:collections",
        "@bazel_skylib//lib:shell",
    ],
)
