load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deb",
    srcs = [
        "package.go",
        "packageindex.go",
        "parser.go",
        "snapshot.go",
        "versions.go",
    ],
    importpath = "github.com/mmogylenko/rules_deb_packages/cmd/debian_package_manager/pkg/deb",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/debian_package_manager/pkg/build/config",
        "//cmd/debian_package_manager/pkg/rhttp",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "deb_test",
    srcs = [
        "package_test.go",
        "parser_test.go",
        "versions_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":deb"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
