"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "merge_providers",
    srcs = ["merge_providers.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:collections",
        "@bazel_skylib//lib:shell",
    ],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//deb/private:__pkg__"],
)
